// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render 1`] = `
<Fragment>
  <form
    className="add-member-form"
  >
    <label
      htmlFor="emailAddress"
    >
      Member Details
    </label>
    <input
      className="default"
      id="emailAddress"
      name="emailAddress"
      onChange={[Function]}
      placeholder="Email"
      type="email"
      value=""
    />
    <label
      htmlFor="roleId"
    >
      Role
    </label>
    <select
      className="role-select"
      id="roleId"
      name="roleId"
      onChange={[Function]}
      value="1"
    >
      <option
        key="0"
        value="1"
      >
        developer
      </option>
      <option
        key="1"
        value="2"
      >
        principal contractor
      </option>
    </select>
    <input
      className="submit-button"
      id="submit"
      name="submit"
      onClick={[Function]}
      readOnly={true}
      type="submit"
      value="Save Changes"
    />
    <input
      className="cancel-button"
      id="cancel"
      name="cancel"
      onClick={[Function]}
      readOnly={true}
      type="cancel"
      value="Cancel"
    />
  </form>
</Fragment>
`;

exports[`enter email address and click submit and fail 1`] = `
<AddNewTeamMember
  addMember={
    [MockFunction] {
      "calls": Array [
        Array [
          "123",
          Object {
            "emailAddress": "hootsuite@prind.tech",
            "roleId": "1",
          },
          [Function],
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  members={
    Object {
      "roles": Array [
        Object {
          "roleId": "1",
          "roleName": "developer",
        },
        Object {
          "roleId": "2",
          "roleName": "principal contractor",
        },
      ],
    }
  }
  onCancelAddMember={[MockFunction]}
  onSuccessAddingMember={[MockFunction]}
  projects={
    Object {
      "chosenProject": Object {
        "projectId": "123",
      },
    }
  }
>
  <Blueprint3.Callout
    intent="danger"
    style={
      Object {
        "marginBottom": "15px",
      }
    }
  >
    <div
      className="bp3-callout bp3-intent-danger bp3-callout-icon"
      style={
        Object {
          "marginBottom": "15px",
        }
      }
    >
      <Blueprint3.Icon
        icon="error"
        size={20}
      >
        <span
          className="bp3-icon bp3-icon-error"
          icon="error"
        >
          <svg
            data-icon="error"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <desc>
              error
            </desc>
            <path
              d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
              fillRule="evenodd"
              key="0"
            />
          </svg>
        </span>
      </Blueprint3.Icon>
      <div />
    </div>
  </Blueprint3.Callout>
  <form
    className="add-member-form"
  >
    <label
      htmlFor="emailAddress"
    >
      Member Details
    </label>
    <input
      className="filled"
      id="emailAddress"
      name="emailAddress"
      onChange={[Function]}
      placeholder="Email"
      type="email"
      value="hootsuite@prind.tech"
    />
    <label
      htmlFor="roleId"
    >
      Role
    </label>
    <select
      className="role-select"
      id="roleId"
      name="roleId"
      onChange={[Function]}
      value="1"
    >
      <option
        key="0"
        value="1"
      >
        developer
      </option>
      <option
        key="1"
        value="2"
      >
        principal contractor
      </option>
    </select>
    <input
      className="submit-button"
      id="submit"
      name="submit"
      onClick={[Function]}
      readOnly={true}
      type="submit"
      value="Save Changes"
    />
    <input
      className="cancel-button"
      id="cancel"
      name="cancel"
      onClick={[Function]}
      readOnly={true}
      type="cancel"
      value="Cancel"
    />
  </form>
</AddNewTeamMember>
`;
